# ezsmtv3

./: .clang-format  .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  CONFIG  Chaff2  Makefile  Makefile.in  README.md  Readme  Readme.md  SimpSolver.h  SolverTypes.h  api.h  atomrule.cc  atomrule.h  changes  cmodels.cc  cmodels.h  cmodels_diff_benchmark.sh  config.status  configure  ctable.cc  ctable.h  defines.h  ex-theory.lp  ex-theory.lp.explain  ex1.ez.grounded  ex1.ez.preparsed  ex2.lp  ex3.lp  ex_color.ez.grounded  ex_color.ez.preparsed  example.ez  example.lp  ezsmtPlus  ezsmt_3ProjectDefense.pptx  graph.h  (+13 more)
.svn/: wc.db
MiniSat_v1.12b/: Constraints.cc  Constraints.h  Global.h  Heap.h  Makefile  README  Solver.cc  Solver.h  SolverTypes.h  Sort.h  VarOrder.h  compile.sh
__OLD__/: Makefile.in  bcircuit  configure.in  cvc4-test.lisp  lista.cc  lista.h  stack.cc
__OLD__/circuit/: BC.bw15  BC.pigeon_p10_h9  README
__OLD__/ezcsp-2.1.1-r4660/: LIBRARY-NOTES.txt  Makefile  asp_solver.cc  cmdline_params.cc  cmdline_params.h  configure  cp_solver.h  cp_solver_gurobi.cc  dlv_rsig  dors-pl.cc  dors.pl  ezcsp  library_notes.cc  library_notes.h  output_model.cc  output_model.h  phpemu.h  pre-parser.cc  search_state.h  test-main.cc  testme.sh  trans-pl.cc  translate  translate.h  translate2  translate2.cc  translate2.sh  translate2_minizinc.cc  versions.cc  versions.h
__OLD__/ezcsp-2.1.1-r4660/CMODELS/: PROBLEM.cmodels
__OLD__/ezcsp-2.1.1-r4660/EXAMPLES/: send-more-money2.ez  send-more-money3.ez  star-australia-map-coloring.ez  star-australia-map-coloring.prolog-encoding.txt  star-send_more_money-simplified.ez  star-send_more_money.prolog-encoding.txt
__OLD__/ezcsp-2.1.1-r4660/EXAMPLES/LP-EXAMPLES/: ex4.ez  ezcsp-lprog-1.ez.output  ezcsp-lprog-2.ez  ezcsp-lprog-2.ez.output  ezcsp-lprog-3.ez
__OLD__/ezcsp-2.1.1-r4660/EXAMPLES/PRE-PARSER_TEST_FILES/: test1  test1.p  test2.p
__OLD__/ezcsp-2.1.1-r4660/EXAMPLES/R-EXAMPLES/: ex1.ez  ex2.ez  ex3.ez  ex3.ez.output  ex4.ez  ex4.ez.output
__OLD__/ezcsp-2.1.1-r4660/EXAMPLES/STAR-DISJ-SCHED/: test.lp
__OLD__/ezcsp-2.1.1-r4660/EXAMPLES/not-added-GLOBAL-CONSTRAINTS/: cumulative1.ez  cumulative2.ez
__OLD__/ezcsp-2.1.1-r4660/PERSISTENT-STATE/: ezcsp-pstate.sh  persistent-state-py.lp
__OLD__/ezcsp-2.1.1-r4660/TRAN/: lemon  lemon.c  parser-main  parser.y
__OLD__/ezcsp-2.1.1-r4660/aspparser/: Makefile  configure.in  dlv_rsig  dlv_rsig.c  parser.c  qqq2.p  qqq3  qqq4
__OLD__/ezcsp-2.1.1-r4660/translate2.dSYM/Contents/: Info.plist
__OLD__/ezcsp-2.1.1-r4660/translate2.dSYM/Contents/Resources/DWARF/: translate2
__OLD__/libpotassco/: CMakeCache.txt  Makefile  cmake_install.cmake
__OLD__/libpotassco/app/: Makefile  cmake_install.cmake
__OLD__/libpotassco/src/: Makefile  cmake_install.cmake
benchmarks/: README.benchs  automated_test.py  comparison_extended.py  system_comparison.py  system_test.py  test_weightedSequence.clingcon3
benchmarks/ezsmt3_benchmarks/: Readme
benchmarks_clean/IDL/: theory.lp
benchmarks_clean/ILA/: theory.lp
benchmarks_clean/LIRA/: theory.lp
benchmarks_clean/LRA/: theory.lp
circuit/: BC.input.tar  BC.queen10  BC.schur2_n13_n3
examples/: clingo-n-queens.lp  clingo-theory-difference.smt2  clingo-traveling-salesperson.lp  ex-theory.lp  ex1-theory.lp  ex3.lp  ex_color.ez  ezcsp-example1.ez  ezcsp-example1.lp  n-queens.lp  non-tight.lp  theory-QF_LIA.lp  theory-QF_LIA.smt  theory-vars.lp
ezcsp-2.1.1-r4660/: Makefile.in  asp_solver.h  common.cc  common.h  config.h  config.h.in  config.status  configure.in  cp_solver.cc  cp_solver_gurobi.h  cp_solver_minizinc.cc  cp_solver_minizinc.h  defs.h  exec-pl.cc  exec.pl  ezcsp.cc  fileToC.sh  gamstest.sh  gringo-test.lp  phpemu.cc  pre-parser.h  release-mingw32.sh  search_state.cc  solver-types.h  trans.pl  translate.cc  translate2.h  translate2_gurobi.cc  translate2_gurobi.h  translate2_minizinc.h  update-copyrights.sh
ezcsp-2.1.1-r4660/CMODELS/: README.txt
ezcsp-2.1.1-r4660/EXAMPLES/: star-australia-map-coloring-simplified.ez  star-send_more_money.ez
ezcsp-2.1.1-r4660/EXAMPLES/DEFINED-EXAMPLES/: def.ez  ex001.ez
ezcsp-2.1.1-r4660/EXAMPLES/LP-EXAMPLES/: ex4.ez.output  ezcsp-lprog-1.ez  ezcsp-lprog-3.ez.output
ezcsp-2.1.1-r4660/EXAMPLES/PRE-PARSER_TEST_FILES/: test2
ezcsp-2.1.1-r4660/EXAMPLES/R-EXAMPLES/: ex1.ez.output  ex2.ez.output  ex5.ez  ex5.ez.output
ezcsp-2.1.1-r4660/EXAMPLES/STAR-DISJ-SCHED/: encoding.ez
ezcsp-2.1.1-r4660/EXAMPLES/not-added-GLOBAL-CONSTRAINTS/: sum1.ez
ezcsp-2.1.1-r4660/PERSISTENT-STATE/: lp2aspcore2.py  pstate-clasp.sh  pstate-gringo.sh
ezcsp-2.1.1-r4660/TRAN/: lexer.c  lexer.l  lexglobal.h  parser.c  parser.h  pp2.h
ezcsp-2.1.1-r4660/aspparser/: Makefile.in  config.h  config.status  configure  parser.h  qqq  qqq.p  qqq2  qqq3.p  qqq4.p
include/: SolverTypes.h
src/: CMakeLists.txt  api.cc  api.h  atomrule.cc  atomrule.h  cmodels.cc  cmodels.h  ctable.cc  ctable.h  defines.h  errorLogger.cc  errorLogger.h  graphscc.cc  graphscc.h  interpret.cc  interpret.h  main.cc  param.h  print.h  program.cc  program.h  read.cc  read.h  rulebuilder.cc  rulebuilder.h  smtlogics.cc  smtlogics.h  smtsolver.cc  smtsolver.h  smtstringhelpers.h  theory.h  theorySpecs.h  theory_specs.h  timer.cc  timer.h  tree.cc  tree.h  utils.cc  version.h
src/include/: SimpSolver.cc  Solver.cc  Solver.h
src/logics/: QF_IDL_logic.cc  QF_IDL_logic.h  QF_LIA_logic.cc  QF_LIA_logic.h  QF_LRA_logic.cc  QF_LRA_logic.h  logic.h
src/solver/: smtprocess.cc  smtprocess.h  smtsolver.cc  smtsolver.h  symbolicexpressionparser.h
tests/: CMakeLists.txt  CmakeLists.txt  integrationtests.cc  readtests.cc  symbolicexpressionparsertests.cc
tests/test-programs/: diff-test-idl-1.lp  dom-test-1.expected  dom-test-1.lp  dom-test-2.expected  dom-test-2.lp  dom-test-3.expected  dom-test-3.lp  dom-test-4.expected  dom-test-4.lp  empty-answer-set.lp  first.expected  graph-coloring.expected  minimize-test-1.expected  minimize-test-2.lp  minimize-test-4.expected  (+29 more)
tools/: ezcsp-dimacs-to-smt.py  gringo  gringo-5.5.1  pre-parser  yices-smt2  z3
(+707 files in other folders)
