dnl Process this file with autoconf to produce a configure script.

AC_INIT(config.h.in)

AC_CONFIG_HEADER(config.h)

dnl >------ checks for programs ------<

AC_PATH_PROG(AR, ar)
AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB
AC_PROG_INSTALL

AC_CANONICAL_HOST
case "$host" in
    *-mingw*)
      CFLAGS="$CFLAGS -static-libgcc"
      CXXFLAGS="$CXXFLAGS -static-libgcc"
      CPPFLAGS="$CPPFLAGS -static-libgcc"
      LDFLAGS="$LDFLAGS -static-libgcc"
      ;;
esac

dnl >------ checks for libraries ------<

dnl >------ checks for header files ------<

dnl >------ checks for typedefs ------<

dnl >------ checks for structures ------<

dnl >------ checks for compiler characteristics ------<

dnl >------ checks for library functions ------<


dnl >------ checks for system services ------<

AC_OUTPUT(Makefile)
