dnl Process this file with autoconf to produce a configure script.

AC_INIT(config.h.in)

AC_CONFIG_HEADER(config.h)

dnl >------ checks for programs ------<

AC_PATH_PROG(AR, ar)
AC_PROG_CC
AC_PROG_INSTALL

dnl >------ checks for libraries ------<

dnl >------ checks for header files ------<

dnl >------ checks for typedefs ------<

dnl >------ checks for structures ------<

dnl >------ checks for compiler characteristics ------<

dnl >------ checks for library functions ------<


dnl >------ checks for system services ------<

AC_OUTPUT(Makefile)
